--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,163 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTERTITLE</a>
+				<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: Who Will Be the New Bishop?</a>
+				</li>
+				<li>
+				<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: Hiram’s Hospital According to Act of Parliament</a>
+				</li>
+				<li>
+				<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: Dr. and Mrs. Proudie</a>
+				</li>
+				<li>
+				<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: The Bishop’s Chaplain</a>
+				</li>
+				<li>
+				<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: A Morning Visit</a>
+				</li>
+				<li>
+				<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: War</a>
+				</li>
+				<li>
+				<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: The Dean and Chapter Take Counsel</a>
+				</li>
+				<li>
+				<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: The Ex-Warden Rejoices in His Probable Return to the Hospital</a>
+				</li>
+				<li>
+				<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: The Stanhope Family</a>
+				</li>
+				<li>
+				<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Mrs. Proudie’s Reception⁠—Commenced</a>
+				</li>
+				<li>
+				<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Mrs. Proudie’s Reception⁠—Concluded</a>
+				</li>
+				<li>
+				<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: Slope versus Harding</a>
+				</li>
+				<li>
+				<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: The Rubbish Cart</a>
+				</li>
+				<li>
+				<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: The New Champion</a>
+				</li>
+				<li>
+				<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: The Widow’s Suitors</a>
+				</li>
+				<li>
+				<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: Baby Worship</a>
+				</li>
+				<li>
+				<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: Who Shall Be Cock of the Walk?</a>
+				</li>
+				<li>
+				<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: The Widow’s Persecution</a>
+				</li>
+				<li>
+				<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: Barchester by Moonlight</a>
+				</li>
+				<li>
+				<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: Mr. Arabin</a>
+				</li>
+				<li>
+				<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: St. Ewold’s Parsonage</a>
+				</li>
+				<li>
+				<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: The Thornes of Ullathorne</a>
+				</li>
+				<li>
+				<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: Mr. Arabin Reads Himself in at St. Ewold’s</a>
+				</li>
+				<li>
+				<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: Mr. Slope Manages Matters Very Cleverly at Puddingdale</a>
+				</li>
+				<li>
+				<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: Fourteen Arguments in Favour of Mr. Quiverful’s Claims</a>
+				</li>
+				<li>
+				<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: Mrs. Proudie Wrestles and Gets a Fall</a>
+				</li>
+				<li>
+				<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: A Love Scene</a>
+				</li>
+				<li>
+				<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: Mrs. Bold is Entertained by Dr. and Mrs. Grantly at Plumstead</a>
+				</li>
+				<li>
+				<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: A Serious Interview</a>
+				</li>
+				<li>
+				<a href="text/chapter-30.xhtml"><span epub:type="z3998:roman">XXX</span>: Another Love Scene</a>
+				</li>
+				<li>
+				<a href="text/chapter-31.xhtml"><span epub:type="z3998:roman">XXXI</span>: The Bishop’s Library</a>
+				</li>
+				<li>
+				<a href="text/chapter-32.xhtml"><span epub:type="z3998:roman">XXXII</span>: A New Candidate for Ecclesiastical Honours</a>
+				</li>
+				<li>
+				<a href="text/chapter-33.xhtml"><span epub:type="z3998:roman">XXXIII</span>: Mrs. Proudie Victrix</a>
+				</li>
+				<li>
+				<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: Oxford⁠—The Master and Tutor of Lazarus</a>
+				</li>
+				<li>
+				<a href="text/chapter-35.xhtml"><span epub:type="z3998:roman">XXXV</span>: Miss Thorne’s Fête Champêtre</a>
+				</li>
+				<li>
+				<a href="text/chapter-36.xhtml"><span epub:type="z3998:roman">XXXVI</span>: Ullathorne Sports⁠—Act I</a>
+				</li>
+				<li>
+				<a href="text/chapter-37.xhtml"><span epub:type="z3998:roman">XXXVII</span>: The Signora Neroni, the Countess De Courcy,<br/> and Mrs. Proudie Meet Each Other at Ullathorne</a>
+				</li>
+				<li>
+				<a href="text/chapter-38.xhtml"><span epub:type="z3998:roman">XXXVIII</span>: The Bishop Sits Down to Breakfast, and the Dean Dies</a>
+				</li>
+				<li>
+				<a href="text/chapter-39.xhtml"><span epub:type="z3998:roman">XXXIX</span>: The Lookalofts and the Greenacres</a>
+				</li>
+				<li>
+				<a href="text/chapter-40.xhtml"><span epub:type="z3998:roman">XL</span>: Ullathorne Sports⁠—Act II</a>
+				</li>
+				<li>
+				<a href="text/chapter-41.xhtml"><span epub:type="z3998:roman">XLI</span>: Mrs. Bold Confides Her Sorrow to Her Friend Miss Stanhope</a>
+				</li>
+				<li>
+				<a href="text/chapter-42.xhtml"><span epub:type="z3998:roman">XLII</span>: Ullathorne Sports⁠—Act III</a>
+				</li>
+				<li>
+				<a href="text/chapter-43.xhtml"><span epub:type="z3998:roman">XLIII</span>: Mr. and Mrs. Quiverful Are Made Happy.<br/> Mr. Slope is Encouraged by the Press</a>
+				</li>
+				<li>
+				<a href="text/chapter-44.xhtml"><span epub:type="z3998:roman">XLIV</span>: Mrs. Bold at Home</a>
+				</li>
+				<li>
+				<a href="text/chapter-45.xhtml"><span epub:type="z3998:roman">XLV</span>: The Stanhopes at Home</a>
+				</li>
+				<li>
+				<a href="text/chapter-46.xhtml"><span epub:type="z3998:roman">XLVI</span>: Mr. Slope’s Parting Interview with the Signora</a>
+				</li>
+				<li>
+				<a href="text/chapter-47.xhtml"><span epub:type="z3998:roman">XLVII</span>: The Dean Elect</a>
+				</li>
+				<li>
+				<a href="text/chapter-48.xhtml"><span epub:type="z3998:roman">XLVIII</span>: Miss Thorne Shows Her Talent at Match-Making</a>
+				</li>
+				<li>
+				<a href="text/chapter-49.xhtml"><span epub:type="z3998:roman">XLIX</span>: The Beelzebub Colt</a>
+				</li>
+				<li>
+				<a href="text/chapter-50.xhtml"><span epub:type="z3998:roman">L</span>: The Archdeacon Is Satisfied with the State of Affairs</a>
+				</li>
+				<li>
+				<a href="text/chapter-51.xhtml"><span epub:type="z3998:roman">LI</span>: Mr. Slope Bids Farewell to the Palace and Its Inhabitants</a>
+				</li>
+				<li>
+				<a href="text/chapter-52.xhtml"><span epub:type="z3998:roman">LII</span>: The New Dean Takes Possession of the Deanery,<br/> and the New Warden of the Hospital</a>
+				</li>
+				<li>
+				<a href="text/chapter-53.xhtml"><span epub:type="z3998:roman">LIII</span>: Conclusion</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
