Fixed errors identified by lint.

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -119,7 +119,7 @@
 					<a href="text/chapter-35.xhtml"><span epub:type="z3998:roman">XXXV</span>: Miss Thorne’s Fête Champêtre</a>
 				</li>
 				<li>
-					<a href="text/chapter-36.xhtml"><span epub:type="z3998:roman">XXXVI</span>: Ullathorne Sports⁠—Act I</a>
+					<a href="text/chapter-36.xhtml"><span epub:type="z3998:roman">XXXVI</span>: Ullathorne Sports⁠—Act <span epub:type="z3998:roman">I</span></a>
 				</li>
 				<li>
 					<a href="text/chapter-37.xhtml"><span epub:type="z3998:roman">XXXVII</span>: The Signora Neroni, the Countess de Courcy, and Mrs. Proudie Meet Each Other at Ullathorne</a>
