--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			<a href="https://rightword.com.au/david.php">David Grigg</a>,<br/>
 			and is based on a transcription produced in 2002 by<br/>
-			<span class="name">David J. Cole</span> and <span class="name">Joseph E. Loewenstein, MD</span><br/>
+			<span class="name">David <abbr class="name">J.</abbr> Cole</span> and <span class="name">Joseph <abbr class="name">E.</abbr> Loewenstein, <abbr class="degree">MD</abbr></span><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/3409">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
