--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -20,7 +20,7 @@
 					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: Hiram’s Hospital According to Act of Parliament</a>
 				</li>
 				<li>
-					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: <abbr>Dr.</abbr> and <abbr>Mrs.</abbr> Proudie</a>
+					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: Dr. and Mrs. Proudie</a>
 				</li>
 				<li>
 					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: The Bishop’s Chaplain</a>
@@ -41,10 +41,10 @@
 					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: The Stanhope Family</a>
 				</li>
 				<li>
-					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: <abbr>Mrs.</abbr> Proudie’s Reception⁠—Commenced</a>
+					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Mrs. Proudie’s Reception⁠—Commenced</a>
 				</li>
 				<li>
-					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: <abbr>Mrs.</abbr> Proudie’s Reception⁠—Concluded</a>
+					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Mrs. Proudie’s Reception⁠—Concluded</a>
 				</li>
 				<li>
 					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: Slope Versus Harding</a>
@@ -71,31 +71,31 @@
 					<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: Barchester by Moonlight</a>
 				</li>
 				<li>
-					<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: <abbr>Mr.</abbr> Arabin</a>
+					<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: Mr. Arabin</a>
 				</li>
 				<li>
-					<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: <abbr>St.</abbr> Ewold’s Parsonage</a>
+					<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: St. Ewold’s Parsonage</a>
 				</li>
 				<li>
 					<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: The Thornes of Ullathorne</a>
 				</li>
 				<li>
-					<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: <abbr>Mr.</abbr> Arabin Reads Himself in at <abbr>St.</abbr> Ewold’s</a>
+					<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: Mr. Arabin Reads Himself in at St. Ewold’s</a>
 				</li>
 				<li>
-					<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: <abbr>Mr.</abbr> Slope Manages Matters Very Cleverly at Puddingdale</a>
+					<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: Mr. Slope Manages Matters Very Cleverly at Puddingdale</a>
 				</li>
 				<li>
-					<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: Fourteen Arguments in Favour of <abbr>Mr.</abbr> Quiverful’s Claims</a>
+					<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: Fourteen Arguments in Favour of Mr. Quiverful’s Claims</a>
 				</li>
 				<li>
-					<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: <abbr>Mrs.</abbr> Proudie Wrestles and Gets a Fall</a>
+					<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: Mrs. Proudie Wrestles and Gets a Fall</a>
 				</li>
 				<li>
 					<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: A Love Scene</a>
 				</li>
 				<li>
-					<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: <abbr>Mrs.</abbr> Bold Is Entertained by <abbr>Dr.</abbr> and <abbr>Mrs.</abbr> Grantly at Plumstead</a>
+					<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: Mrs. Bold Is Entertained by Dr. and Mrs. Grantly at Plumstead</a>
 				</li>
 				<li>
 					<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: A Serious Interview</a>
@@ -110,7 +110,7 @@
 					<a href="text/chapter-32.xhtml"><span epub:type="z3998:roman">XXXII</span>: A New Candidate for Ecclesiastical Honours</a>
 				</li>
 				<li>
-					<a href="text/chapter-33.xhtml"><span epub:type="z3998:roman">XXXIII</span>: <abbr>Mrs.</abbr> Proudie Victrix</a>
+					<a href="text/chapter-33.xhtml"><span epub:type="z3998:roman">XXXIII</span>: Mrs. Proudie Victrix</a>
 				</li>
 				<li>
 					<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: Oxford⁠—The Master and Tutor of Lazarus</a>
@@ -122,7 +122,7 @@
 					<a href="text/chapter-36.xhtml"><span epub:type="z3998:roman">XXXVI</span>: Ullathorne Sports⁠—Act <span epub:type="z3998:roman">I</span></a>
 				</li>
 				<li>
-					<a href="text/chapter-37.xhtml"><span epub:type="z3998:roman">XXXVII</span>: The Signora Neroni, the Countess de Courcy, and <abbr>Mrs.</abbr> Proudie Meet Each Other at Ullathorne</a>
+					<a href="text/chapter-37.xhtml"><span epub:type="z3998:roman">XXXVII</span>: The Signora Neroni, the Countess de Courcy, and Mrs. Proudie Meet Each Other at Ullathorne</a>
 				</li>
 				<li>
 					<a href="text/chapter-38.xhtml"><span epub:type="z3998:roman">XXXVIII</span>: The Bishop Sits Down to Breakfast, and the Dean Dies</a>
@@ -134,22 +134,22 @@
 					<a href="text/chapter-40.xhtml"><span epub:type="z3998:roman">XL</span>: Ullathorne Sports⁠—Act <span epub:type="z3998:roman">II</span></a>
 				</li>
 				<li>
-					<a href="text/chapter-41.xhtml"><span epub:type="z3998:roman">XLI</span>: <abbr>Mrs.</abbr> Bold Confides Her Sorrow to Her Friend Miss Stanhope</a>
+					<a href="text/chapter-41.xhtml"><span epub:type="z3998:roman">XLI</span>: Mrs. Bold Confides Her Sorrow to Her Friend Miss Stanhope</a>
 				</li>
 				<li>
 					<a href="text/chapter-42.xhtml"><span epub:type="z3998:roman">XLII</span>: Ullathorne Sports⁠—Act <span epub:type="z3998:roman">III</span></a>
 				</li>
 				<li>
-					<a href="text/chapter-43.xhtml"><span epub:type="z3998:roman">XLIII</span>: <abbr>Mr.</abbr> and <abbr>Mrs.</abbr> Quiverful Are Made Happy. <abbr>Mr.</abbr> Slope Is Encouraged by the Press</a>
+					<a href="text/chapter-43.xhtml"><span epub:type="z3998:roman">XLIII</span>: Mr. and Mrs. Quiverful Are Made Happy. Mr. Slope Is Encouraged by the Press</a>
 				</li>
 				<li>
-					<a href="text/chapter-44.xhtml"><span epub:type="z3998:roman">XLIV</span>: <abbr>Mrs.</abbr> Bold at Home</a>
+					<a href="text/chapter-44.xhtml"><span epub:type="z3998:roman">XLIV</span>: Mrs. Bold at Home</a>
 				</li>
 				<li>
 					<a href="text/chapter-45.xhtml"><span epub:type="z3998:roman">XLV</span>: The Stanhopes at Home</a>
 				</li>
 				<li>
-					<a href="text/chapter-46.xhtml"><span epub:type="z3998:roman">XLVI</span>: <abbr>Mr.</abbr> Slope’s Parting Interview with the Signora</a>
+					<a href="text/chapter-46.xhtml"><span epub:type="z3998:roman">XLVI</span>: Mr. Slope’s Parting Interview with the Signora</a>
 				</li>
 				<li>
 					<a href="text/chapter-47.xhtml"><span epub:type="z3998:roman">XLVII</span>: The Dean Elect</a>
@@ -164,7 +164,7 @@
 					<a href="text/chapter-50.xhtml"><span epub:type="z3998:roman">L</span>: The Archdeacon Is Satisfied with the State of Affairs</a>
 				</li>
 				<li>
-					<a href="text/chapter-51.xhtml"><span epub:type="z3998:roman">LI</span>: <abbr>Mr.</abbr> Slope Bids Farewell to the Palace and Its Inhabitants</a>
+					<a href="text/chapter-51.xhtml"><span epub:type="z3998:roman">LI</span>: Mr. Slope Bids Farewell to the Palace and Its Inhabitants</a>
 				</li>
 				<li>
 					<a href="text/chapter-52.xhtml"><span epub:type="z3998:roman">LII</span>: The New Dean Takes Possession of the Deanery, and the New Warden of the Hospital</a>
