--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			<a href="https://rightword.com.au/david.php">David Grigg</a>,<br/>
 			and is based on a transcription produced in 2002 by<br/>
-			<b class="name">David <abbr class="name">J.</abbr> Cole</b> and <b class="name">Joseph <abbr class="name">E.</abbr> Loewenstein, <abbr class="degree">M.D.</abbr></b><br/>
+			<b epub:type="z3998:personal-name">David <abbr epub:type="z3998:given-name">J.</abbr> Cole</b> and <b epub:type="z3998:personal-name">Joseph <abbr epub:type="z3998:given-name">E.</abbr> Loewenstein, <abbr class="degree">M.D.</abbr></b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/3409">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
