--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -17,7 +17,7 @@
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
-			<a href="https://rightword.com.au/david.php">David Grigg</a>,<br/>
+			<a href="https://thegriggs.org/david/">David Grigg</a>,<br/>
 			and is based on a transcription produced in 2002 by<br/>
 			<b epub:type="z3998:personal-name">David <abbr epub:type="z3998:given-name">J.</abbr> Cole</b> and <b epub:type="z3998:personal-name">Joseph <abbr epub:type="z3998:given-name">E.</abbr> Loewenstein, <abbr epub:type="z3998:name-title">M.D.</abbr></b><br/>
 			for<br/>
