--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -22,7 +22,7 @@
 			<b epub:type="z3998:personal-name">David <abbr epub:type="z3998:given-name">J.</abbr> Cole</b> and <b epub:type="z3998:personal-name">Joseph <abbr epub:type="z3998:given-name">E.</abbr> Loewenstein, <abbr epub:type="z3998:name-title">M.D.</abbr></b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/3409">Project Gutenberg</a><br/>
-			and on digital scans available at the<br/>
+			and on digital scans from the<br/>
 			<a href="https://standardebooks.org/ebooks/anthony-trollope/barchester-towers#page-scans">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Worcester Cathedral</i>,<br/>
